tests/errors/wrong_val_57/e1.src
.IPPcode21

DEFVAR GF@a
MOVE GF@a int@0

IDIV GF@a int@25 GF@a
